--- a/Circant/index.html
+++ b/Circant/index.html
@@ -1,56 +1,81 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset="UTF-8">
-<title>HTML5 / CSS3 Drop-Down Navigation Menu</title>
-<meta name="description" content="">
-<link rel="stylesheet" href="css/circant.css">
-<link href="css/Circant/jquery-ui-1.10.2.custom.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-<script type="text/javascript" src="js/jquery-ui-1.10.2.custom.js"></script>
-
-	
-
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="js/examples/horizontal/css/MenuMatic.css" type="text/css" media="screen" charset="utf-8" />
+<title>Untitled Document</title>
 </head>
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script>
 
+ $(document).ready(function(){
+    $("#lessen").click(function(){
+      $('#content').load("lessen.html");
+	  Lessen_Load_Sidebar();
+    });
+
+});
+
+function Lessen_Load_Sidebar()
+{
+	$('#sidebar-left').html("<ul><li>Lessen</li><li>Stages</li><li>Specialisatie</li></ul>");
+}
+
+</script>
 <body>
-<div id="header"><img id="hdimg" src="Files/circantlogo.png"></div>
-<div id="wrapper">
-  <nav id="nav">
-    <ul id="navigation">
-      <li><a href="#" class="first">Home</a></li>
-      <li><a href="#">Aanbod &raquo;</a>
-        <ul>
-          <li><a href="#">Lessen</a></li>
-          <li><a href="#">Stages</a></li>
-          <li><a href="#">Specialisaties</a> </li>
-        </ul>
-      </li>
-      <li><a href="#">Initiaties &raquo;</a>
-        <ul>
-          <li><a href="#">Open piste</a></li>
-          <li><a href="#">workshop</a></li>
-          <li><a href="#">Animaties</a></li>
-          <li><a href="#">Materiaal verhuur</a></li>
-        </ul>
-      </li>
-      <li><a href="#">Over ons &raquo;</a>
-        <ul>
-          <li><a href="#">Missie &amp; Visie</a></li>
-          <li><a href="#">Wie is wie &raquo;</a>
-            <ul>
-              <li><a href="#">Lesgevers</a></li>
-              <li><a href="#">RvB</a></li>
-              <li><a href="#">Coörd vrijwiligers</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Geschiedenis</a></li>
-        </ul>
-      </li>
-    </ul>
-  </nav>
+<div data-role="header">
+<img src="images/logo.jpg" />
+<ul id="nav">
+	<li><a href="#">Home</a>
+	</li>
+    <li><a href="#">Aanbod</a>
+		<ul>
+			<li><a id="lessen" class="has_click">Lessen</a></li>
+            <li><a id="stages" class="has_click">Stages</a></li>
+            <li><a id="specialisaties" class="has_click">Specialisaties</a></li>
+		</ul>
+	</li>
+    <li><a href="#">Initiaties</a>
+		<ul>
+			<li><a href="#">Open piste</a></li>
+            <li><a href="#">Workshop</a></li>
+            <li><a href="#">Animaties</a></li>
+            <li><a href="#">Materiaal verhuur</a></li>
+		</ul>
+	</li>
+    <li><a href="#">Over ons</a>
+		<ul>
+			<li><a href="#">Missie & Visie</a></li>
+            <li><a href="#">Wie is wie</a></li>
+            <li><a href="#">Geschiedenis</a></li>
+		</ul>
+	</li>
+</ul>
 </div>
-<!--end wrapper-->
+<div data-role="content">
+	<div id="sidebar-left">
+		<div id="nav-left">
+        test
+        test
+        test
+    	</div>
+	</div>
+    
+    <div id="content">
+    zrzererzezze
+    </div>
+    
+	<div id="sidebar-right">
+	right
+	</div>
+</div>
 
+	<script src="js/MenuMatic_0.68.3.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" >
+		window.addEvent('domready', function() {			
+			var myMenu = new MenuMatic();
+		});		
+	</script>
 </body>
 </html>
